--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,17 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = '1.0'
+// define the properties file
+ext.configFile = file 'build.properties'
+
+configFile.withReader {
+    // read config. it shall from now on be referenced as simply config or as project.config
+    def prop = new Properties()
+    prop.load(it)
+    ext.config = new ConfigSlurper().parse prop
+}
+
+version = "0.${config.build_number}"
 group= 'com.github.lunatrius'
 archivesBaseName = 'LunaTest'
 
@@ -52,3 +62,16 @@ processResources
     }
 }
 
+task incrementBuildNumber() {
+    doLast {
+        // increment
+        config.build_number = (config.build_number.toString().toInteger()) + 1
+
+        // write back to the file
+        configFile.withWriter {
+            config.toProperties().store(it, "")
+        }
+    }
+}
+
+build.dependsOn incrementBuildNumber
